--- a/sites/all/themes/custom/capl/assets/sass/partials/_views.scss
+++ b/sites/all/themes/custom/capl/assets/sass/partials/_views.scss
@@ -134,7 +134,7 @@
 
     img {
       vertical-align: middle;
-      max-height: 100px;
+      max-height: 125px;
       @include opacity(0.6);
       padding: 0;
       max-width: 100%;
